--- a/ServiciosTutorias/Web.config
+++ b/ServiciosTutorias/Web.config
@@ -14,6 +14,7 @@
         <behavior>
           <!-- Para evitar revelar información de los metadatos, establezca los valores siguientes en false antes de la implementación -->
           <serviceMetadata httpGetEnabled="true" httpsGetEnabled="true"/>
+			<dataContractSerializer maxItemsInObjectGraph="6553500"/>
           <!-- Para recibir detalles de las excepciones en los errores para la depuración, establezca el siguiente valor en true. Para no revelar información sobre las excepciones establézcalo en false antes de la implementación -->
           <serviceDebug includeExceptionDetailInFaults="false"/>
         </behavior>
