--- a/ClienteSistemaTutorias/App.config
+++ b/ClienteSistemaTutorias/App.config
@@ -7,12 +7,16 @@
         <bindings>
             <basicHttpBinding>
                 <binding name="BasicHttpBinding_IService1" />
+                <binding name="BasicHttpBinding_IAcademico" />
             </basicHttpBinding>
         </bindings>
         <client>
             <endpoint address="http://localhost:59612/Service1.svc" binding="basicHttpBinding"
                 bindingConfiguration="BasicHttpBinding_IService1" contract="ServiceReferenceTutorias.IService1"
                 name="BasicHttpBinding_IService1" />
+            <endpoint address="http://localhost:59612/Service1.svc" binding="basicHttpBinding"
+                bindingConfiguration="BasicHttpBinding_IAcademico" contract="ServiceReferenceTutorias.IAcademico"
+                name="BasicHttpBinding_IAcademico" />
         </client>
     </system.serviceModel>
 </configuration>
