--- a/ServiciosTutorias/ServiciosTutorias.csproj
+++ b/ServiciosTutorias/ServiciosTutorias.csproj
@@ -77,6 +77,7 @@
       <DependentUpon>DataClassesTutoriasDB.dbml</DependentUpon>
     </Compile>
     <Compile Include="Modelo\Mensaje.cs" />
+    <Compile Include="Modelo\SolucionDAO.cs" />
     <Compile Include="Service1.svc.cs">
       <DependentUpon>Service1.svc</DependentUpon>
     </Compile>
