--- a/ServiciosTutorias/ServiciosTutorias.csproj
+++ b/ServiciosTutorias/ServiciosTutorias.csproj
@@ -79,6 +79,7 @@
     </Compile>
     <Compile Include="Modelo\Mensaje.cs" />
     <Compile Include="Modelo\SolucionDAO.cs" />
+    <Compile Include="Modelo\TutoradoSesionDAO.cs" />
     <Compile Include="Service1.svc.cs">
       <DependentUpon>Service1.svc</DependentUpon>
     </Compile>
