se ha agregado el CU modificar fechas de sesión de tutoría

--- a/ClienteSistemaTutorias/App.config
+++ b/ClienteSistemaTutorias/App.config
@@ -8,6 +8,7 @@
             <basicHttpBinding>
                 <binding name="BasicHttpBinding_IService1" />
                 <binding name="BasicHttpBinding_IAcademico" />
+                <binding name="BasicHttpBinding_IITutoriaAcademicaMgt" />
             </basicHttpBinding>
         </bindings>
         <client>
@@ -17,6 +18,10 @@
             <endpoint address="http://localhost:59612/Service1.svc" binding="basicHttpBinding"
                 bindingConfiguration="BasicHttpBinding_IAcademico" contract="ServiceReferenceTutorias.IAcademico"
                 name="BasicHttpBinding_IAcademico" />
+            <endpoint address="http://localhost:59612/ITutoriaAcademicaMgt.svc"
+                binding="basicHttpBinding" bindingConfiguration="BasicHttpBinding_IITutoriaAcademicaMgt"
+                contract="ServiceReferenceITutoriaAcademicaMgt.IITutoriaAcademicaMgt"
+                name="BasicHttpBinding_IITutoriaAcademicaMgt" />
         </client>
     </system.serviceModel>
 </configuration>
