se agregaron los 5 CU funcionl

--- a/ClienteSistemaTutorias/App.config
+++ b/ClienteSistemaTutorias/App.config
@@ -9,6 +9,7 @@
                 <binding name="BasicHttpBinding_IService1" />
                 <binding name="BasicHttpBinding_IAcademico" />
                 <binding name="BasicHttpBinding_IITutoriaAcademicaMgt" />
+                <binding name="BasicHttpBinding_IIPeriodoEscolarMgt" />
             </basicHttpBinding>
         </bindings>
         <client>
@@ -22,6 +23,10 @@
                 binding="basicHttpBinding" bindingConfiguration="BasicHttpBinding_IITutoriaAcademicaMgt"
                 contract="ServiceReferenceITutoriaAcademicaMgt.IITutoriaAcademicaMgt"
                 name="BasicHttpBinding_IITutoriaAcademicaMgt" />
+            <endpoint address="http://localhost:59612/IPeriodoEscolarMgt.svc"
+                binding="basicHttpBinding" bindingConfiguration="BasicHttpBinding_IIPeriodoEscolarMgt"
+                contract="ServiceReferenceIPeriodoEscolarMgt.IIPeriodoEscolarMgt"
+                name="BasicHttpBinding_IIPeriodoEscolarMgt" />
         </client>
     </system.serviceModel>
 </configuration>
